tests/ui/proc-macro/signature-proc-macro.stderr
error: function-like proc macro has incorrect signature
  --> $DIR/signature-proc-macro.rs:10:25
   |
LL | pub fn bad_input(input: String) -> TokenStream {
   |                         ^^^^^^ expected `TokenStream`, found `String`
   |
   = note: expected signature `fn(TokenStream) -> TokenStream`
              found signature `fn(String) -> TokenStream`

error: function-like proc macro has incorrect signature
  --> $DIR/signature-proc-macro.rs:16:42
   |
LL | pub fn bad_output(input: TokenStream) -> String {
   |                                          ^^^^^^ expected `TokenStream`, found `String`
   |
   = note: expected signature `fn(TokenStream) -> TokenStream`
              found signature `fn(TokenStream) -> String`

error: function-like proc macro has incorrect signature
  --> $DIR/signature-proc-macro.rs:22:30
   |
LL | pub fn bad_everything(input: String) -> String {
   |                              ^^^^^^ expected `TokenStream`, found `String`
   |
   = note: expected signature `fn(TokenStream) -> TokenStream`
              found signature `fn(String) -> String`

error: function-like proc macro has incorrect signature
  --> $DIR/signature-proc-macro.rs:28:36
   |
LL | pub fn too_many(a: TokenStream, b: TokenStream, c: String) -> TokenStream {
   |                                    ^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected signature `fn(TokenStream) -> TokenStream`
              found signature `fn(TokenStream, TokenStream, String) -> TokenStream`

error: aborting due to 4 previous errors

